--- a/recipe-sharing-app/package.json
+++ b/recipe-sharing-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-handling-react",
+  "name": "recipe-sharing-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "yup": "^1.6.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
