--- a/recipe-sharing-platform/package.json
+++ b/recipe-sharing-platform/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+     "react-router-dom": "^6.x.x",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.3.0",
     "vite": "^4.0.0"
