--- a/github-user-search/package.json
+++ b/github-user-search/package.json
@@ -25,5 +25,12 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
+    "devDependencies": {
+  "tailwindcss": "^3.0.0",
+  "postcss": "^8.3.0",
+  "autoprefixer": "^10.2.0",
+  // other dependencies...
+}
+
   }
 }
